--- a/Resources/Portfolio_Setup.ipynb
+++ b/Resources/Portfolio_Setup.ipynb
@@ -19,17 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "222bd925-eac4-4c98-a569-c59e823dc0d7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
