adding presentation ideas to README

--- a/Portfolios/Portfolio_Setup_Eli.ipynb
+++ b/Portfolios/Portfolio_Setup_Eli.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plot\n",
     "import seaborn as sns\n",
+    "from ipywidgets import interact\n",
     "\n",
     "import riskfolio as rp\n",
     "from openbb_terminal.sdk import openbb\n",
@@ -455,8 +456,42 @@
     }
    ],
    "source": [
-    "combined_df.plot(figsize=(25,15)).autoscale()"
+    "combined_df.plot(figsize=(25,15),\n",
+    "\n",
+    ").autoscale()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dfa1525003ce44578ec8ed8fbc6363a3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Checkbox(value=True, description='omar_portfolio_returns'), Checkbox(value=True, descrip…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.plotter_fun(omar_portfolio_returns=True, my_portfolio_returns=True, eamonn_portfolio_returns=True, mike_portfolio_returns=True)>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
